# rfind-monitor

./: .gitignore  README.md  api.py  app.py  const.py  dashApp.py  dataGenerator.py  dataService.py  data_crunch.py  data_gen.py  middle_man.py  redis.conf  requirements.txt  setup.cfg  supervisord.conf  zmq-handler.py
assets/: clientside-functions.js
conf/: middleman.service  redis.conf  redis.service
rfind_monitor/backend/: middle_man.py  plasma_store.py  redis_store.py
rfind_monitor/const/: __init__.py  crunch.py  gui.py  net.py  rates.py  sim.py
rfind_monitor/frontend/: crunch.py  dash.py
rfind_monitor/frontend/assets/: clientside-functions.js
rfind_monitor/sim/: data_gen.py  zmq_pusher.py
rfind_monitor/utils/: data_gen.py  hashing.py  redis.py
server/: data_pusher.py
