[metadata]
name = rfind_monitor
version = 0.0.1
author = Nicholas Bruce
author_email =  nsbruce@uvic.ca
description = Web application to view NRC (DRAO) RFInd Monitor output
url = https://github.com/mistic-lab/web-spectra-explorer

[options]
packages = find:
python_requires = >3
install_requires = 
    numpy==1.20.1
    brain-plasma==0.3.3
    dash==1.19.0
    h5py==3.2.1
    ipython==7.21.0
    jedi==0.18.0
    pandas==1.2.3
    plotly==4.14.3
    pyzmq==22.0.3
    dash-extensions==0.0.51
    redis==3.5.3